--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,11 +12,11 @@ jobs:
     permissions: write-all
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v6.0.0
 
-      - uses: actions/setup-python@v3
-      - uses: ilammy/msvc-dev-cmd@v1.12.0
-      - uses: msys2/setup-msys2@v2
+      - uses: actions/setup-python@v6.0.0
+      - uses: ilammy/msvc-dev-cmd@v1.13.0
+      - uses: msys2/setup-msys2@v2.29.0
         with:
           install: >
             zip
@@ -40,7 +40,7 @@ jobs:
           && msys2 build.sh
 
       - name: Upload zip
-        uses: svenstaro/upload-release-action@v2
+        uses: svenstaro/upload-release-action@2.11.3
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ./ffmpeg.zip
